Fixed UI elements from turning white on shift press

--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,10 @@
   -webkit-font-smoothing: antialiased;
 }
 
+:focus {
+  outline: none;
+}
+
 body {
   color: var(--text-primary);
   font-family: var(--font-family-base);
